corrected background css, as it was causing problem on desktop mode not covering the site properly

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -35,7 +35,9 @@ p {
 
 body {
   width: 100%;
-  background: url('../images/background.jpg') no-repeat;
+  background-image: url('../images/background.jpg');
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .container {
